added users app, create the form of login/register, added static files and uses them on css and html files

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,6 @@ media/*
 #this command wants to tell us that ignore folder media but keep files inside her in a local way
 #to commit and push an empty git folder
 !media/.gitkeep
+
+static/*
+!static/.gitkeep
