--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "editor.fontSize": 10,
     "workbench.colorTheme": "Default Dark+",
     "terminal.integrated.fontSize": 10,
+    "window.zoomLevel": -1,
     "python.formatting.provider": "black",
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": ["--max-line-length", "98"],
